# Text-Summarizer-Using-HuggingFace-Transformers

./: .gitignore  README.md  app.py  main.py  params.yaml  pyproject.toml  requirements.txt  template.py
config/: config.yaml
research/: 1_data_ingestion.ipynb  2_data_transformation.ipynb  3_model_trainer.ipynb  4_model_evaluation.ipynb  research.ipynb  textsummarizer.ipynb
src/text_summarizer/components/: data_ingestion.py  data_transformation.py  model_evaluation.py  model_trainer.py
src/text_summarizer/config/: configuration.py
src/text_summarizer/entity/: __init__.py
src/text_summarizer/logging/: __init__.py
src/text_summarizer/pipeline/: prediction_pipeline.py  stage_1_data_ingestion_pipeline.py  stage_2_data_transformation_pipeline.py  stage_3_model_trainer_pipeline.py  stage_4_model_evaluation_pipeline.py
src/text_summarizer/utils/: common.py
