[project]
name = "text-summarizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.8.1",
    "boto3>=1.38.43",
    "datasets>=3.6.0",
    "ensure>=1.0.4",
    "evaluate>=0.4.4",
    "fastapi>=0.115.13",
    "ipykernel>=6.29.5",
    "jinja2>=3.1.6",
    "matplotlib>=3.10.3",
    "mypy-boto3-s3>=1.38.39",
    "nltk>=3.9.1",
    "notebook>=7.4.3",
    "pandas>=2.3.0",
    "py7zr>=1.0.0",
    "python-box>=7.3.2",
    "pyyaml>=6.0.2",
    "rouge-score>=0.1.2",
    "sacrebleu>=2.5.1",
    "torch>=2.7.1",
    "tqdm>=4.67.1",
    "transformers[sentencepiece]>=4.52.4",
    "uvicorn>=0.34.3",
]
